@@ -1,3 +1,8 @@
+2007-01-10  Brandon Hale  <brandon@ubuntu.com>
+
+	* src/SpecialKeys.cs, src/PlayerWindow.cs:
+	Patch from Rob Fisher to add support for multimedia keys.
+
 2007-01-08  Brandon Hale  <brandon@ubuntu.com>
 
 	* src/notify-sharp/, src/TrayIcon.cs:
